apps/base/adguard-home/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    namespace: adguard-home
---
